--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9A620;"></path></svg></div>
   </div>
   <section id="services">
-    <div class="container" >
-      <h2>Services</h2>
+    <div class="container" style="width:40%; text-align:center;">
+      <h2>Your favorite healthy food at home</h2>
     </div>
     <div class="container" style="flex-wrap:wrap;">
       <div class="wrapper">
@@ -236,52 +236,41 @@
     <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9A620;"></path></svg></div>
   </div>
   <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col s12 col m6">
-            <h6>About</h6>
-            <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+      <div class="footer">
+        <div class="container" style="justify-content: space-between;">
+          <div class="about">
+            <h6>About Me</h6>
+            <p>Website created by <b><span class="span">Alex Ruiz.</span></b> <br> I'm designer and front end web developer from Buenos Aires, Argentina. I build websites in different programming languages ​​that include HTML, CSS, Javascript, Jquery, Bootstrap and Materialize.</p>
           </div>
 
-          <div class="col s6 col m3">
-            <h6>Categories</h6>
+          <div>
+            <h6>My Social Networks</h6>
             <ul class="footer-links">
-              <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-              <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-              <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-              <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-              <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-              <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
-            </ul>
-          </div>
-
-          <div class="col s6 col m3">
-            <h6>Quick Links</h6>
-            <ul class="footer-links">
-              <li><a href="http://scanfcode.com/about/">About Us</a></li>
-              <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-              <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-              <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-              <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+              <li><a href="https://github.com/alexruix"><i class="fa-brands fa-github"></i>Github</a></li>
+              <li><a href="https://dribbble.com/alexruix"><i class="fa-brands fa-dribbble"></i>Dribble</a></li>
+              <li><a href="https://codepen.io/Tormenta"><i class="fa-brands fa-codepen"></i>Codepen</a></li>
+              <li><a href="https://www.instagram.com/ui.tormenta/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+              <li><a href="mailto: alexruiz1666@gmail.com"><i class="fa-solid fa-envelope"></i>Email</a></li>
             </ul>
           </div>
         </div>
         <hr>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col m8 col s6 col xs12">
-            <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
-         <a href="#">Scanfcode</a>.
+      <div class="footer">
+        <div class="container" style="justify-content: space-between;">
+          <div>
+            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by
+         <b>Alex Ruiz.</b></a>
             </p>
           </div>
 
-          <div class="col m4 col s6 col xs12">
+          <div>
             <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a class="github" href="https://github.com/alexruix"><i class="fa fa-github"></i></a></li>
+              <li><a class="dribbble" href="https://dribbble.com/alexruix"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="codepen" href="https://codepen.io/Tormenta"><i class="fa fa-codepen"></i></a></li>
+              <li><a class="dribbble" href="https://www.instagram.com/ui.tormenta/"><i class="fa fa-instagram"></i></a></li>
+              <li><a class="email" href="mailto: alexruiz1666@gmail.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
         </div>
