--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content=="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"/>
   <link rel="stylesheet" href="css/style.css">
@@ -27,7 +28,6 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-
     </nav>
     <div class="container">
       <div class="left">
