--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content=="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css"/>
+  <link rel="stylesheet" href="css/universal.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -30,14 +31,12 @@
       </ul>
     </nav>
     <div class="container">
-      <div class="left">
-        <h1>Let's be veggie</h1>
-        <h2>We ready to supply healthy food for you <span class="span">anytime</span></h2>
-        <a class="buttonsecondary" href="#menu">Discover menu</a>
-      </div>
-      <div class="right">
-        <img src="img/veganpng.png" alt="">
-      </div>
+        <div class="left">
+          <h1>Let's be veggie</h1>
+          <h2>We ready to supply healthy food for you <span class="span">anytime</span></h2>
+          <a class="buttonsecondary" href="#menu">Discover menu</a>
+        </div>
+        <img class="right" src="img/veganpng.png" alt="">
     </div>
   </header>
   <div class="wave">
