--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <span class="text text__price-original">
               <span class="sr-only">Originally:</span>$20.00</span>
           </p>
-          <a class="button button__primary button-card">Buy</a>
+          <button class="button button__primary button-card">Buy</button>
         </div>
       </div>
       <div class="menu__card">
@@ -102,7 +102,7 @@
             <span class="text text__price-original">
               <span class="sr-only">Originally:</span>$25.00</span>
           </p>
-          <a class="button button__primary button-card">Buy</a>
+          <button class="button button__primary button-card">Buy</button>
         </div>
       </div>
       <div class="menu__card">
@@ -123,7 +123,7 @@
           <p class="text text__price">
             $29.49
           </p>
-          <a class="button button__primary button-card">Buy</a>
+          <button class="button button__primary button-card">Buy</button>
         </div>
       </div>
     </div>
@@ -143,10 +143,10 @@
     <div class="container">
       <div class="menu">
         <div class="menu__card-services">
-            <img src="https://elements-cover-images-0.imgix.net/440ccbf6-a930-48c7-8b1b-955e5e10f8a3?auto=compress%2Cformat&fit=max&w=1019&s=177ef9bbc022c96d9bd2b22889f142b3" alt="Delivery food" class="menu__card-img">
-            <div class="overlay">
-              <p class="text text__card">Fast delivery</p>
-            </div>
+          <img src="https://elements-cover-images-0.imgix.net/440ccbf6-a930-48c7-8b1b-955e5e10f8a3?auto=compress%2Cformat&fit=max&w=1019&s=177ef9bbc022c96d9bd2b22889f142b3" alt="Delivery food" class="menu__card-img">
+          <div class="overlay">
+            <p class="text text__card">Fast delivery</p>
+          </div>
         </div>
 
         <div class="menu__card-services">
@@ -176,7 +176,7 @@
     <div class="contact__grid">
       <img src="img/mail.png" class="card-item__bg" alt="Send email">
       <form class="form" action="index.html" method="post">
-          <p class="text__price">Fill in the fields below and we'll get back to you</p>
+        <p class="text__price">Fill in the fields below and we'll get back to you</p>
         <div class="form__section">
           <label for="first_name">Name</label>
           <input type="text" id="first_name" name="first_name" minlength="4" maxlength="80" autocomplete="given-name" required>
@@ -189,7 +189,7 @@
           <label for="message">Message</label>
           <textarea class="form__imput" id="message" name="name" rows="8" cols="80"></textarea>
         </div>
-          <button class="button button__primary button-card" type="submit" name="action">Send</button>
+        <button class="button button__primary button-card" type="submit" name="action">Send</button>
       </form>
     </div>
   </section>
@@ -198,47 +198,41 @@
         <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9A620;"></path>
       </svg></div>
   </div>
-  <footer class="site-footer">
-    <div class="footer">
-      <div class="container" style="justify-content: space-between;">
-        <div class="about">
-          <h6>About Me</h6>
-          <p>Website created by <b><span class="span">Alex Ruiz.</span></b> <br> I'm designer and front end web developer from Buenos Aires, Argentina. I build websites in different programming languages ​​that include HTML, CSS, Javascript, Jquery,
-            Bootstrap and Materialize.</p>
+  <footer class="delivery footer">
+      <div class="footer__container">
+        <div class="footer__grid">
+          <div class="about">
+            <h6>About Me</h6>
+            <p>Website created by <b><a class="text__red" href="https://www.linkedin.com/in/alexruix/">Alex Ruiz.</a></b> <br> I'm UI designer and frontend developer from Argentina. I design and develop web responsive interfaces user friendly to offer the best possible product with HTML, CSS, Javascript, Figma, Illustrator, an so on. </p>
+          </div>
+          <div class="social-media">
+            <h6>My Social Networks</h6>
+            <ul class="footer-links">
+              <li><a href="https://github.com/alexruix"><i class="fa-brands fa-github"></i>Github</a></li>
+              <li><a href="https://dribbble.com/alexruix"><i class="fa-brands fa-dribbble"></i>Dribble</a></li>
+              <li><a href="https://codepen.io/Tormenta"><i class="fa-brands fa-codepen"></i>Codepen</a></li>
+              <li><a href="https://www.instagram.com/ui.tormenta/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+              <li><a href="mailto: alexruiz1666@gmail.com"><i class="fa-solid fa-envelope"></i>Email</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div>
-          <h6>My Social Networks</h6>
-          <ul class="footer-links">
-            <li><a href="https://github.com/alexruix"><i class="fa-brands fa-github"></i>Github</a></li>
-            <li><a href="https://dribbble.com/alexruix"><i class="fa-brands fa-dribbble"></i>Dribble</a></li>
-            <li><a href="https://codepen.io/Tormenta"><i class="fa-brands fa-codepen"></i>Codepen</a></li>
-            <li><a href="https://www.instagram.com/ui.tormenta/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href="mailto: alexruiz1666@gmail.com"><i class="fa-solid fa-envelope"></i>Email</a></li>
-          </ul>
-        </div>
-      </div>
-      <hr>
-    </div>
-    <div class="footer">
-      <div class="container" style="justify-content: space-between;">
-        <div>
-          <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by
-            <b>Alex Ruiz.</b></a>
-          </p>
-        </div>
+        <hr>
 
-        <div>
-          <ul class="social-icons">
-            <li><a class="github" href="https://github.com/alexruix"><i class="fa fa-github"></i></a></li>
-            <li><a class="dribbble" href="https://dribbble.com/alexruix"><i class="fa fa-dribbble"></i></a></li>
-            <li><a class="codepen" href="https://codepen.io/Tormenta"><i class="fa fa-codepen"></i></a></li>
-            <li><a class="dribbble" href="https://www.instagram.com/ui.tormenta/"><i class="fa fa-instagram"></i></a></li>
-            <li><a class="email" href="mailto: alexruiz1666@gmail.com"><i class="fa fa-envelope"></i></a></li>
-          </ul>
+        <div class="footer__grid">
+            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by
+              <b>Alex Ruiz.</b></a>
+            </p>
+
+            <ul class="social-icons">
+              <li><a class="github" href="https://github.com/alexruix"><i class="fa fa-github"></i></a></li>
+              <li><a class="dribbble" href="https://dribbble.com/alexruix"><i class="fa fa-dribbble"></i></a></li>
+              <li><a class="codepen" href="https://codepen.io/Tormenta"><i class="fa fa-codepen"></i></a></li>
+              <li><a class="dribbble" href="https://www.instagram.com/ui.tormenta/"><i class="fa fa-instagram"></i></a></li>
+              <li><a class="email" href="mailto: alexruiz1666@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            </ul>
         </div>
       </div>
-    </div>
   </footer>
 
 
