--- a/index.html
+++ b/index.html
@@ -206,16 +206,6 @@
           <p>Website created by <b><a class="text__red" href="https://www.linkedin.com/in/alexruix/">Alex Ruiz.</a></b> <br> I'm UI designer and frontend developer from Argentina. I design and develop web responsive interfaces user friendly to offer
             the best possible product with HTML, CSS, Javascript, Figma, Illustrator, an so on. </p>
         </div>
-        <div class="social-media">
-          <h6>My Social Networks</h6>
-          <ul class="footer-links">
-            <li><a href="https://github.com/alexruix"><i class="fa-brands fa-github"></i>Github</a></li>
-            <li><a href="https://dribbble.com/alexruix"><i class="fa-brands fa-dribbble"></i>Dribble</a></li>
-            <li><a href="https://codepen.io/Tormenta"><i class="fa-brands fa-codepen"></i>Codepen</a></li>
-            <li><a href="https://www.instagram.com/ui.tormenta/"><i class="fa-brands fa-instagram"></i>Instagram</a></li>
-            <li><a href="mailto: alexruiz1666@gmail.com"><i class="fa-solid fa-envelope"></i>Email</a></li>
-          </ul>
-        </div>
       </div>
 
       <hr>
@@ -226,33 +216,21 @@
         </p>
 
         <div class="social-icons">
-          <a class="social__item linkedin" aria-label="Enlace a linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/alexruix/"> <span class="icon-font">
+          <a class="social__item social__item-linkedin" aria-label="Enlace a linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/alexruix/"> <span class="icon-font">
               <i class="fa-brands fa-linkedin"></i> </span> </a>
-          <a class="social__item github" aria-label="Enlace a github" target="_blank" rel="noopener" href="https://github.com/alexruix"> <span class="icon-font">
+          <a class="social__item social__item-github" aria-label="Enlace a github" target="_blank" rel="noopener" href="https://github.com/alexruix"> <span class="icon-font">
               <i class="fa-brands fa-github"></i> </span> </a>
-          <a class="social__item facebook" aria-label="Enlace a Behance" target="_blank" rel="noopener" href="https://behance.net/alexruix"> <span class="icon-font">
+          <a class="social__item social__item-behance" aria-label="Enlace a Behance" target="_blank" rel="noopener" href="https://behance.net/alexruix"> <span class="icon-font">
               <i class="fa-brands fa-behance"></i> </span> </a>
-          <a class="social__item twitter" aria-label="Enlace a twitter" target="_blank" rel="noopener" href="https://twitter.com/alexruixdev"> <span class="icon-font">
+          <a class="social__item social__item-twitter" aria-label="Enlace a twitter" target="_blank" rel="noopener" href="https://twitter.com/alexruixdev"> <span class="icon-font">
               <i class="fa-brands fa-twitter"></i> </span> </a>
-          <a class="social__item instagram" aria-label="Enlace a instagram" target="_blank" rel="noopener" href="https://www.instagram.com/alexr.dev/"> <span class="icon-font">
-              <i class="fa-brands fa-instagram"></i> </span> </a>
+          <!-- <a class="social__item social__item-instagram" aria-label="Enlace a instagram" target="_blank" rel="noopener" href="https://www.instagram.com/alexr.dev/"> <span class="icon-font">
+              <i class="fa-brands fa-instagram"></i> </span> </a> -->
         </div>
       </div>
   </footer>
 
 
-  <!-- <div class="profile-card-social">
-    <a class="social__item linkedin" aria-label="Enlace a linkedin" target="_blank" rel="noopener" href="https://www.linkedin.com/in/alexruix/"> <span class="icon-font">
-        <i class="fa-brands fa-linkedin"></i> </span> </a>
-    <a class="social__item github" aria-label="Enlace a github" target="_blank" rel="noopener" href="https://github.com/alexruix"> <span class="icon-font">
-        <i class="fa-brands fa-github"></i> </span> </a>
-    <a class="social__item facebook" aria-label="Enlace a Behance" target="_blank" rel="noopener" href="https://behance.net/alexruix"> <span class="icon-font">
-        <i class="fa-brands fa-behance"></i> </span> </a>
-    <a class="social__item twitter" aria-label="Enlace a twitter" target="_blank" rel="noopener" href="https://twitter.com/alexruixdev"> <span class="icon-font">
-        <i class="fa-brands fa-twitter"></i> </span> </a>
-    <a class="social__item instagram" aria-label="Enlace a instagram" target="_blank" rel="noopener" href="https://www.instagram.com/alexr.dev/"> <span class="icon-font">
-        <i class="fa-brands fa-instagram"></i> </span> </a>
-  </div> -->
 
 
 
